Final report update

--- a/docs/finalreport/index.bib
+++ b/docs/finalreport/index.bib
@@ -8,7 +8,8 @@
 
 @thesis{ref2,
   title={Improving the Quality of {OpenAPI} Specifications Using {TypeScript} Types and Annotations},
-  author={Hobmaier, Wolfgang},\\~  type={Bachelor's Thesis},
+  author={Hobmaier, Wolfgang},
+  type={Bachelor's Thesis},
   year={2020}
 }
 
@@ -215,6 +216,7 @@
   year={2017},
   url={https://apple-swift.readthedocs.io/en/latest/TypeChecker.html},
   note={Accessed 2021-03-19}
+}
 
 @book{ref25,
   title={The Java language specification},
@@ -304,6 +306,7 @@
   year={2017},
   url={https://apple-swift.readthedocs.io/en/latest/TypeChecker.html},
   note={Accessed 2021-03-19}
+}
 
 @book{ref35,
   title={Top quality type error messages},
